# linpoint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/linpoint/: __init__.py  _checker.py  _generation.py  _history.py  _minimize.py  _model.py  _runner.py  _verify.py
tests/: test_checker.py  test_generation.py  test_history.py  test_model.py  test_public_api.py  test_runner.py  test_verify.py
