[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "linpoint"
version = "0.1.0"
description = "Model-based linearizability testing for Python objects"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "bitlical" },
]
keywords = [
    "concurrency",
    "free-threading",
    "hypothesis",
    "linearizability",
    "property-based-testing",
    "testing",
]
dependencies = [
    "hypothesis>=6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitlical/linpoint"
Documentation = "https://github.com/bitlical/linpoint#readme"
Source = "https://github.com/bitlical/linpoint"
Issues = "https://github.com/bitlical/linpoint/issues"
Changelog = "https://github.com/bitlical/linpoint/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "mypy>=1.13",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linpoint"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
